# moonlight-obs

./: .gitmodules  CMakeLists.txt  README.md  buildspec.json
data/locale/: en-US.ini
src/: OBSSource.cpp  OBSSource.hpp  Properties.cpp  Properties.hpp  moonlight-source.cpp  moonlight-source.hpp  plugin-main.cpp
src/Connections/: Address.cpp  Address.hpp  GameStreamHost.hpp  HTTPClient.cpp  HTTPClient.hpp  Host.hpp  HostSettings.cpp  HostSettings.hpp  HostState.hpp  LANSearcher.cpp  LANSearcher.hpp  PairStatus.hpp
src/Discovery/: LANSearcher.cpp  LANSearcher.hpp  SRVRecord.hpp  mDNSRecordExtractor.cpp  mDNSRecordExtractor.hpp
src/Forms/: FindHostsDialog.cpp  FindHostsDialog.hpp  ManualPairingDialog.cpp  ManualPairingDialog.hpp  PairDialog.cpp  PairDialog.hpp
src/Utilities/: StringTools.hpp  Version.cpp  Version.hpp
